--- a/app/src/main/res/layout/activity_class_matching_friend.xml
+++ b/app/src/main/res/layout/activity_class_matching_friend.xml
@@ -241,12 +241,13 @@
             android:gravity="center"
             android:id="@+id/class_right">
 
-            <Spinner
-                android:id="@+id/sp_dept"
-                android:layout_width="180dp"
-                android:layout_height="50dp"
-                android:entries="@array/major"
-                android:gravity="right"/>
+            <TextView
+                android:id="@+id/main_dept_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="주전공 학과"
+                android:textColor="@color/black"
+                android:textSize="17dp"/>
 
         </LinearLayout>
     </LinearLayout>
