--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -7,13 +7,51 @@
         <item>4학년</item>
     </string-array>
 
+    <!-- 주전공선택 -->
     <string-array name="major">
-        <item>컴퓨터공학과</item>
-        <item>산업경영공학과</item>
-        <item>유아교육과</item>
+        <item>신학과</item>
+        <item>기독교교육상담학과</item>
+        <item>문화선교학과</item>
+
+        <item>국어국문학과</item>
+        <item>영어영문학과</item>
+        <item>중어중문학과</item>
+
+        <item>국제개발협력학과</item>
+        <item>사회복지학과</item>
+        <item>행정학과</item>
+
+        <item>관광개발학과</item>
         <item>경영학과</item>
+        <item>글로벌물류학부-유통물류전공</item>
+        <item>글로벌물류학부-국제물류전공</item>
+        <item>산업경영공학과</item>
+
+        <item>유아교육과</item>
+        <item>체육교육과</item>
+
+        <item>컴퓨터공학과 </item>
+        <item>정보통신공학과</item>
         <item>미디어소프트웨어학과</item>
+        <item>도시디자인정보공학과</item>
+
+        <item>음악학부-성악전공</item>
+        <item>음악학부-피아노전공</item>
+        <item>연기예술학과</item>
+        <item>영화영상학과</item>
+        <item>뷰티디자인학과</item>
+        <item>실용음악과-보컬</item>
+        <item>실용음악과-건반</item>
+        <item>실용음악과-작곡</item>
+        <item>실용음악과-드럼</item>
+        <item>실용음악과-기타</item>
+
+
     </string-array>
+
+
+
+
 
     <string-array name="major_type">
         <item>주전공</item>
