design: chatBubble margin padding

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -56,17 +56,19 @@
             android:layout_height="48dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
+            android:paddingLeft="10dp"
             android:background="@drawable/round_shape_white"
             tools:ignore="SpeakableTextPresentCheck" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/Button_send"
             android:layout_width="70dp"
             android:layout_height="60dp"
             android:gravity="center"
             android:text="입력"
             android:textColor="@color/white"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            android:background="@drawable/round_shape"/>
 
 
     </LinearLayout>
