Revert "Merge pull request #2 from neonadeul/chatBubble"
This reverts commit b363b523aedd4820e49b21c5f234846719aceb4c, reversing
changes made to d2e8a7bb232f5a7d0f1f6a34e34238ca15e09f75.

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -56,19 +56,17 @@
             android:layout_height="48dp"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
-            android:paddingLeft="10dp"
             android:background="@drawable/round_shape_white"
             tools:ignore="SpeakableTextPresentCheck" />
 
-        <androidx.appcompat.widget.AppCompatButton
+        <Button
             android:id="@+id/Button_send"
             android:layout_width="70dp"
             android:layout_height="60dp"
             android:gravity="center"
             android:text="입력"
             android:textColor="@color/white"
-            android:textSize="18dp"
-            android:background="@drawable/round_shape"/>
+            android:textSize="18dp" />
 
 
     </LinearLayout>
