--- a/app/src/main/res/layout/activity_review_write.xml
+++ b/app/src/main/res/layout/activity_review_write.xml
@@ -42,11 +42,20 @@
         tools:ignore="ExtraText">
 
         <ImageView
-            android:layout_width="130dp"
-            android:layout_height="130dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@drawable/ic_account_circle_130"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="10dp" />
+
+        <TextView
+            android:id="@+id/receiver_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="상대방 이름"
+            android:textSize="18dp"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
             android:layout_marginBottom="10dp"/>
 
         <View
