review Real finish

--- a/app/src/main/res/layout/activity_review_page.xml
+++ b/app/src/main/res/layout/activity_review_page.xml
@@ -51,6 +51,7 @@
             android:src="@drawable/ic_account_circle_130"/>
 
         <TextView
+            android:id="@+id/my_avg_score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="B+"
@@ -108,67 +109,23 @@
         android:layout_marginTop="10dp"/>
 
 
-    <ScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/line2"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:fillViewport="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@id/line2">
-
-            <LinearLayout
-                android:id="@+id/wrap_content"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp">
-
-                <TextView
-                    android:id="@+id/score"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="T0"
-                    android:textSize="40dp"
-                    android:textColor="@color/black"
-                    android:background="@drawable/circle_background"
-                    android:padding="10dp"/>
-
-                <TextView
-                    android:id="@+id/content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="서버에서 불러온 후기 내용"
-                    android:textColor="@color/black"
-                    android:textSize="16dp"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="18dp"
-                    android:background="@drawable/round_shape"
-                    android:backgroundTint="#FEE6E2"
-                    android:padding="10dp"
-                    android:elevation="10dp"/>
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="#d9d9d9"
-                android:layout_marginTop="10dp"/>
+        android:scrollbarFadeDuration="0"
+        android:scrollbarSize="5dp"
+        android:scrollbarThumbVertical="@android:color/darker_gray"
+        android:scrollbars="vertical"
+        android:layout_weight="1">
 
 
 
-        </LinearLayout>
 
 
-
-    </ScrollView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 
