--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -49,11 +49,13 @@
             android:src="@drawable/ic_account_circle_130"/>
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="B+"
+            android:id="@+id/my_avg_score"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:text="--"
             android:textSize="40dp"
             android:textColor="@color/black"
+            android:gravity="center"
             android:background="@drawable/circle_background"
             android:padding="10dp"
             android:layout_gravity="bottom|end"
