--- a/app/src/main/res/layout/activity_other_person_profile.xml
+++ b/app/src/main/res/layout/activity_other_person_profile.xml
@@ -52,11 +52,12 @@
 
         <TextView
             android:id="@+id/avg_score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="A+"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:text="--"
             android:textSize="40dp"
             android:textColor="@color/black"
+            android:gravity="center"
             android:background="@drawable/circle_background"
             android:padding="10dp"
             android:layout_gravity="bottom|end"
