--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,17 +38,9 @@
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/senior_matching_button"
-            android:layout_width="300dp"
-            android:layout_height="250dp"
+            android:layout_width="350dp"
+            android:layout_height="300dp"
             android:background="@drawable/match_people_main_button"
-            tools:ignore="SpeakableTextPresentCheck" />
-
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/class_matching_button"
-            android:layout_width="300dp"
-            android:layout_height="250dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/same_class_people_main_button"
             tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
@@ -79,10 +71,10 @@
             android:layout_weight="1"/>
 
         <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/alarm_page_button"
-            android:layout_width="75dp"
-            android:layout_height="62dp"
-            android:background="@drawable/alarm_page_icon"
+            android:id="@+id/chat_room_button"
+            android:layout_width="48dp"
+            android:layout_height="58dp"
+            android:background="@drawable/chat_icon"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <Space
