--- a/app/src/main/res/layout/activity_mypage.xml
+++ b/app/src/main/res/layout/activity_mypage.xml
@@ -135,6 +135,7 @@
             android:layout_weight="1"/>
 
         <TextView
+            android:id="@+id/log_out_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="로그아웃"
