--- a/app/src/main/res/layout/activity_retouch_interest_choice.xml
+++ b/app/src/main/res/layout/activity_retouch_interest_choice.xml
@@ -417,6 +417,7 @@
         android:text="수정"
         android:textSize="18dp"
         android:textColor="@color/white"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"/>
 
 </LinearLayout>
